--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="inner">
         <ul class="menu">
           <li>&copy; 2025 Maarten Wijdeveld. All rights reserved.</li>
-          <li>Design adapted from <a href="http://html5up.net">HTML5 UP</a></li>
+          <li>Design adapted from Hyperspace at <a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
       </div>
     </footer>
@@ -144,3 +144,4 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
