--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <!-- About Me -->
       <section id="about" class="wrapper style1 section">
-        <img src="images/Jotunheimen_2025.jpg" alt="Profile Picture" />
+        <img src="images/Jotunheimen_2025.jpeg" alt="Profile Picture" />
         <div class="text">
           <h2>About Me</h2>
           <p></p>
@@ -191,6 +191,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
