--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="inner">
           <h2>Curriculum Vitae</h2>
           <div class="cv-grid">
-            <iframe src="files/CV_Academic.pdf"></iframe>
+            <iframe src="files/Academic_CV_Maarten_Wijdeveld__08_2025.pdf"></iframe>
             <!-- <iframe src="files/CV_Professional.pdf"></iframe> -->
           </div>
         </div>
@@ -199,6 +199,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
