--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 
       <!-- MW -->
       <section id="MW" class="wrapper style1 section">
-        <img src="images/Jotunheimen_2025.jpeg" alt="Profile Picture" />
+        <img src="images/Jotunheimen_2025.jpeg" 
+       alt="Profile Picture" 
+       style="border-radius: 50%; width: 200px; height: 200px; object-fit: cover;" />
         <div class="text">
           <h1>Maarten Wijdeveld</h1>
         </div>
@@ -199,6 +201,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
