--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <div class="inner">
           <h2>Curriculum Vitae</h2>
           <div class="cv-grid">
-            <iframe src="files/Academic_CV_Maarten_Wijdeveld__08_2025.pdf"></iframe>
-            <!-- <iframe src="files/CV_Professional.pdf"></iframe> -->
+            <iframe src="files/Academic_CV_Maarten_Wijdeveld__08_2025.pdf">
+            style="width: 100%; height: 800px; border: none;"></iframe>
           </div>
         </div>
       </section>
@@ -201,6 +201,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
