--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <section id="MW" class="wrapper style1 section">
         <img src="images/Jotunheimen_2025.jpeg" 
        alt="Profile Picture" 
-       style="border-radius: 75%; width: 300px; height: 300px; object-fit: cover;" />
+       style=width: 300px; height: 300px;" />
         <div class="text">
           <h1>Maarten Wijdeveld</h1>
         </div>
@@ -201,6 +201,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
