--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <footer id="footer" class="wrapper style1-alt">
       <div class="inner">
         <ul class="menu">
-          <li>&copy; 2025 Maarten Wijdeveld. All rights reserved.</li>
+          <li>&copy; 2025 Maarten Wijdeveld.</li>
           <li>Design adapted from Hyperspace template hosted at <a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
       </div>
@@ -201,6 +201,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
