--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
       </section>
 
       <!-- cv -->
-      <section id="cv" class="wrapper style2 fade-up">
+      <section id="cv" class="wrapper style2 section">
         <div class="inner">
           <h2>Curriculum Vitae</h2>
           <p></p>
           <div class="cv-grid">
             <iframe src="files/Academic_CV_Maarten_Wijdeveld__08_2025.pdf">
-            style="width: 150%; height: 1200px; border: none;"></iframe>
+            style="width: 100%; height: 800px; border: none;"></iframe>
           </div>
         </div>
       </section>
@@ -109,8 +109,23 @@
           <p></p>
             My Master’s thesis...
         </div>
+        <p></p>
         <img src="images/thesis_image.jpg" alt="Thesis Illustration" />
       </section>
+
+
+      <!-- poster
+      <section id="cv" class="wrapper style2 fade-up">
+        <div class="inner">
+          <h2>Conference Poster</h2>
+          <p></p>
+            Presented at the <strong>2025 Netherlands Astronomy Conference</strong>
+          <div class="cv-grid">
+            <iframe src="files/NAC poster 2025.pdf">
+            style="width: 150%; height: 2000px; border: none;"></iframe>
+          </div>
+        </div>
+      </section>  -->
 
       <!-- poster -->
       <section id="poster" class="wrapper style2 section">
@@ -201,6 +216,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
