--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <!-- embedded PDF viewer -->
         <div class="pdf-container">
           <iframe 
-            src="files/NAC_Poster_final_MaartenWijdeveld.pdf"
+            src="files/NAC_poster_2025.pdf"
             title="Conference Poster PDF"
             width="100%"
             height="800px"
@@ -217,6 +217,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
