--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
         <!-- embedded PDF viewer -->
         <div class="pdf-container">
           <iframe 
-            src="files/NAC_poster_2025.pdf"
-            title="Conference Poster PDF"
+            src="files/NAC poster 2025.pdf"
             width="100%"
             height="800px"
             style="border: none; box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 10px;">
@@ -217,6 +216,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
