--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <div class="inner">
         <ul class="menu">
           <li>&copy; 2025 Maarten Wijdeveld.</li>
-          <li>Design adapted from Hyperspace template hosted at <a href="http://html5up.net">HTML5 UP</a></li>
+          <li>Design adapted from <a href="http://html5up.net">HTML5 UP</a></li>
         </ul>
       </div>
     </footer>
@@ -216,6 +216,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
