--- a/index.html
+++ b/index.html
@@ -72,15 +72,14 @@
 
       <!-- MW -->
       <section id="MW" class="wrapper style1 section">
+        <h1>Maarten Wijdeveld</h1>
         <img src="images/Jotunheimen_2025.jpeg" 
-       alt="Profile Picture" 
-       style=width: 300px; height: 300px;" />
-        <div class="text">
-          <h1>Maarten Wijdeveld</h1>
-        </div>
+             alt="Profile Picture" 
+             style="width: 200px; height: 300px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.2);" />
       </section>
+
       
-      <!-- about me -->
+      <!-- about me 
       <section id="about" class="wrapper style1 section">
         <div class="text">
           <h2>About Me</h2>
@@ -89,32 +88,39 @@
           </p>
         </div>
       </section>
+      -->
 
       <!-- cv -->
-<section id="cv" class="wrapper style2 section">
-  <div class="text">
-    <h2>Curriculum Vitae</h2>
-  </div>
-  <div class="pdf-container">
-    <iframe 
-      src="files/Academic_CV_Maarten_Wijdeveld__08_2025.pdf"
-      style="width: 100%; height: 80vh; border: none; box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 10px;">
-    </iframe>
-  </div>
-</section>
+      <section id="cv" class="wrapper style2 section">
+        <div class="text">
+          <h2>Curriculum Vitae</h2>
+        </div>
+        <div class="pdf-container">
+          <iframe 
+            src="files/Academic_CV_Maarten_Wijdeveld__08_2025.pdf"
+            style="width: 100%; height: 80vh; border: none; box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 10px;">
+          </iframe>
+        </div>
+      </section>
 
-<!-- MSc thesis -->
-<section id="thesis" class="wrapper style1 section">
-  <div class="text">
-    <h2>MSc Thesis</h2>
-    <p>My Master’s thesis...</p>
-  </div>
-  <div class="image-container">
-    <img src="images/thesis_image.jpg" 
-         alt="Thesis Illustration"
-         style="width: 90%; max-width: 1000px; border-radius: 10px; box-shadow: 0 0 15px rgba(0,0,0,0.2);">
-  </div>
-</section>
+      <!-- MSc thesis -->
+      <section id="thesis" class="wrapper style1 section">
+        <div class="text">
+          <h2>MSc thesis</h2>
+          <p></p>
+            My MSc thesis covering ... [t.b.d.]
+        </div>
+        
+        <!-- embedded PDF viewer -->
+        <div class="pdf-container">
+          <iframe 
+            src="files/MSc thesis Maarten Wijdeveld s1045554 compressed.pdf"
+            width="100%"
+            height="800px"
+            style="border: none; box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 10px;">
+          </iframe>
+        </div>
+      </section>
 
 
       <!-- poster
@@ -253,6 +259,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
