--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       <div class="inner">
         <nav>
           <ul>
-            <!---<li><a href="#MW">Maarten Wijdeveld</a></li>-->
-            <li><a href="#about">About Me</a></li>
+            <!---<li><a href="#MW">Maarten Wijdeveld</a></li>
+            <li><a href="#about">About Me</a></li>-->
             <li><a href="#cv">CV</a></li>
             <li><a href="#thesis">MSc Thesis</a></li>
             <li><a href="#poster">Poster</a></li>
@@ -259,6 +259,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
