--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
       <section id="thesis" class="wrapper style1 section">
         <div class="text">
           <h2>MSc thesis</h2>
-          <p></p>
-            My MSc thesis covering ... [t.b.d.]
+          <!---<p></p>
+            My MSc thesis covering ... [t.b.d.] -->
         </div>
         
         <!-- embedded PDF viewer -->
@@ -265,6 +265,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
