--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         <img src="images/Jotunheimen_2025.jpeg" 
              alt="Profile Picture" 
              style="
-             width: 200px; 
-             height: 200px; 
+             width: 250px; 
+             height: 250px; 
              border-radius: 50%;       /* makes it circular */
              object-fit: cover;        /* keeps proportions inside circle */
              box-shadow: 0 0 10px rgba(0,0,0,0.2); 
-             transform: translateX(-20px);  /* shift left */
+             transform: translateX(-50px);  /* shift left */
              " />
       </section>
 
@@ -112,7 +112,7 @@
       <!-- MSc thesis -->
       <section id="thesis" class="wrapper style1 section">
         <div class="text">
-          <h2>MSc thesis</h2>
+          <h2>MSc Thesis</h2>
           <!---<p></p>
             My MSc thesis covering ... [t.b.d.] -->
         </div>
@@ -265,6 +265,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
