--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <li><a href="#cv">CV</a></li>
             <li><a href="#thesis">MSc Thesis</a></li>
             <li><a href="#poster">Poster</a></li>
+            <li><a href="#pubs">Co-authorship</a></li>
           </ul>
         </nav>
       </div>
@@ -172,6 +173,17 @@
         </div>
       </section>
 
+      <section>
+        <id="pubs" class="wrapper style1 section">
+        <div class="text">
+          <h2>Co-authorship</h2>
+            <p></p>
+          <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250915580M/abstract" target="_blank">Moltzer et al. (2025)</a>          
+        </div>
+
+        
+      </section>
+
 <style>
 /* general section styling        */
 section.wrapper {
@@ -265,6 +277,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
