--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="text">
           <h2>Co-authorship</h2>
             <p></p>
-          <a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250915580M/abstract" target="_blank">Moltzer et al. (2025)</a>          
+            Part of the models I worked on as an additional extension to my bachelor's thesis ended up in a paper of a PhD student at Radboud (<a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250915580M/abstract" target="_blank">Moltzer et al. 2025</a>).          
         </div>
 
         
@@ -277,6 +277,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
