--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li><a href="#about">About Me</a></li>-->
             <li><a href="#cv">CV</a></li>
             <li><a href="#thesis">MSc Thesis</a></li>
-            <li><a href="#poster">Poster</a></li>
+            <li><a href="#poster">Conference Poster</a></li>
             <li><a href="#pubs">Co-authorship</a></li>
           </ul>
         </nav>
@@ -277,6 +277,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
