--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
         </div>
       </section>
 
-      <section>
-        <id="pubs" class="wrapper style1 section">
+      <section id="pubs" class="wrapper style1 section">
         <div class="text">
           <h2>Co-authorship</h2>
             <p></p>
@@ -287,6 +286,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
