--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ section.wrapper .button:hover {
   border-radius: 50%;
   object-fit: cover;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  transform: translateX(-100px);  /* will now work */
+  /*transform: translateX(-100px);  /* will now work */
   transition: transform 0.3s ease; /* optional smooth movement */
 }
 
@@ -286,6 +286,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
