--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="text">
           <h2>Co-authorship</h2>
             <p></p>
-            The stellar evolution models I worked on as an additional extension to my bachelor's thesis ended up in a paper of a PhD student at Radboud recently accepted to A&A (<a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250915580M/abstract" target="_blank">Moltzer, C. A. S., Pols, O. R., Van Winckel, H., Temmink, K. D., and Wijdeveld, M. W. (2025). Understanding post-RGB binaries through stable mass transfer.</a>).          
+            The stellar evolution models I worked on as an additional extension to my bachelor's thesis ended up in a paper recently accepted to A&A (<a href="https://ui.adsabs.harvard.edu/abs/2025arXiv250915580M/abstract" target="_blank">Moltzer, C. A. S., Pols, O. R., Van Winckel, H., Temmink, K. D., and Wijdeveld, M. W. (2025). Understanding post-RGB binaries through stable mass transfer.</a>).          
         </div>
 
         
@@ -286,6 +286,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
