--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="text">
           <h2>About Me</h2>
           <p></p>
-            Hi there, I’m Maarten, an ambitious astrophysics student who hopes to continue working on research by doing a PhD. Upon completing my MSc degree in the Netherlands I moved to Japan to partake in an extracurricular research programme at Tohoku University in Japan, supported by a JASSO scholarship. Here I'm studying protoplanetary disk dynamics through non-ideal MHD simulations in the group of associate prof. Kengo Tomida. In the below you can find relevant scientific contributions from my MSc and BSc degrees.
+            Hi there, I’m Maarten, an ambitious astrophysics student who hopes to continue working on research by doing a PhD. Upon completing my MSc degree in the Netherlands I moved to Japan to partake in an extracurricular research programme at Tohoku University, supported by a JASSO scholarship. Here I'm studying protoplanetary disk dynamics through non-ideal MHD simulations in the group of associate prof. Kengo Tomida. In the below you can find relevant scientific contributions from my MSc and BSc degrees.
         </div>
       </section>
       
@@ -285,6 +285,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
