--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <p></p>
             Hi there, I’m Maarten, an astrophysics student from the Netherlands who is now looking for a PhD position. Upon completing my MSc degree in the Netherlands I moved to Japan to partake in an extracurricular research programme at Tohoku University, supported by a JASSO scholarship. Here I'm studying protoplanetary disk dynamics through non-ideal MHD simulations in the group of associate prof. Kengo Tomida. 
           <p></p>
-          In the below you can find relevant scientific contributions from during my MSc and BSc.
+          In the below you can find my CV and relevant scientific contributions.
         </div>
       </section>
       
@@ -287,6 +287,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
