--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="text">
           <!--<h2>About Me</h2>
           <p></p>-->
-            Hi there, I’m Maarten, an astrophysics student from the Netherlands who is now looking for a PhD position. Upon completing my MSc degree in the Netherlands I moved to Japan to partake in an extracurricular research programme at Tohoku University, supported by a JASSO scholarship. Here I'm studying protoplanetary disk dynamics through non-ideal MHD simulations in the group of associate prof. Kengo Tomida. 
+            Hi there, I’m Maarten, an astrophysics student from the Netherlands who is now looking for a PhD position. Upon completing my MSc degree at Radboud I moved to Japan to partake in an extracurricular research programme at Tohoku University, supported by a JASSO scholarship. Here I'm studying protoplanetary disk dynamics through non-ideal MHD simulations in the group of associate prof. Kengo Tomida. 
           <p></p>
           In the below you can find my CV as well as my relevant scientific contributions thus far.
         </div>
@@ -289,6 +289,7 @@ section.wrapper .button:hover {
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
